fixed an issues with dlete HTTP (was showing parametrs) and added Aouht back with development mode (not auth required) and production mode (auth required)
