# routes/locations.js
@@ -4,46 +4,46 @@ const controller = require('../controllers/index');
 const validation = require('../middleware/validate');
 const collections =require('../helpers/collections');
 const { Collection } = require('mongoose');
-// const { isAuthenticated } = require("../middleware/authenticate");
+const { isAuthenticated } = require("../middleware/authenticate");
 
 routes.get(
     '/',
     (req, res) => {
         //#swagger.tags=['Locations']
-        controller.getAll(req, res, collections.locations(req, res))
+        controller.getAll(req, res, collections.locations(req))
     }
 )
 routes.get(
     '/:id', 
     (req, res) => {
         //#swagger.tags=['Locations']
-        controller.getSingle(req, res, collections.locations(req, res))
+        controller.getSingle(req, res, collections.locations(req))
     }
 )
 routes.post(
     '/',
-    // isAuthenticated,
+    isAuthenticated,
     validation.saveLocations,
     (req, res) => {
         //#swagger.tags=['Locations']
-        controller.create(req, res, collections.locations(req, res))
+        controller.create(req, res, collections.locations(req))
     }
 )
 routes.put(
     '/:id', 
+    isAuthenticated,
     validation.saveLocations,
-    // isAuthenticated,
     (req, res) => {
         //#swagger.tags=['Locations']
-        controller.update(req, res, collections.locations(req, res))
+        controller.update(req, res, collections.locations(req))
     }
 )
 routes.delete(
     '/:id',
-    // isAuthenticated,
+    isAuthenticated,
     (req, res) => {
         //#swagger.tags=['Locations']
-        controller.deleteItem(req, res, collections.locations(req, res))
+        controller.deleteItem(req, res, collections.locations(req.body, false))
     }
 )
 
