# server.js
@@ -1,67 +1,51 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
-// const passport = require('passport');
-// const session = require('express-session');
-// const GitHubStrategy = require('passport-github2').Strategy;
-// const cors = require('cors');
+const passport = require('passport');
+const session = require('express-session');
+const cors = require('cors');
 
 const app = express();
 const port = process.env.PORT || 3100;
+const mode = process.env.NODE_ENV || "production";
 
-app
-    .use(bodyParser.json())
-    // .use(session({
-    //     secret: "secret" ,
-    //     resave: false ,
-    //     saveUninitialized: true,
-    // }))
-    // .use(passport.initialize())
-    // .use(passport.session())
-    .use((req, res, next) => {
-        res.setHeader('Access-Control-Allow-Origin', '*');
-        res.setHeader(
-            'Access-Control-Allow-Headers',
-            'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
-        );
-        res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
-        next();
-    })
-    // .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
-    // .use(cors({ origin: '*'}))
-    .use('/', require('./routes'));
 
-    // Commented out for OAuth
-    // passport.use(new GitHubStrategy({
-    //     clientID: process.env.GITHUB_CLIENT_ID,
-    //     clientSecret: process.env.GITHUB_CLIENT_SECRET,
-    //     callbackURL: process.env.CALLBACK_URL
-    //     },
-    //     function(accessToken, refreshToken, profile, done){
-    //         return done(null, profile);
-    //     }
-    // ));
+app.use(bodyParser.json())
 
+if (mode === "production") {
+    // session middleware
+    app.use(session({
+        secret: "secret" ,
+        resave: false ,
+        saveUninitialized: true,
+    }))
+    // passport middleware
+    .use(passport.initialize())
+    .use(passport.session())
+} 
+// header
+app.use((req, res, next) => {
+    res.setHeader("Access-Control-Allow-Origin", "*");
+    res.setHeader("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept, Z-key");
+    res.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+    next()})    
+// cors
+// if (mode === "production") {
+    app.use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
+        .use(cors({ origin: '*'}))
+// }
+// all routes
+app.use('/', require('./routes'));
+
+// passport
+if (mode === "production") require("./helpers/passport").init(passport);
+
+//error handling
 process.on('uncaughtException', (err, origin) => {
     console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
 });
 
-// Commented out for OAuth
-// passport.serializeUser((user, done) => {
-//     done(null, user);
-// });
-// passport.deserializeUser((user, done) => {
-//     done(null, user);
-// });
-
-// app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `logged in as ${req.session.user.username}` : "Logged out")});
-// app.get('/github/callback', passport.authenticate('github', {
-//     failureRedirect: '/api-docs', session: false}),
-//     (req, res) => {
-//     req.session.user = req.user;
-//     res.redirect('/');
-//     });
-
+// initilization and connection to DB
 mongodb.initDb((err) => {
     if(err) {
         console.log(err);
